// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloudEventForm tests Snapshot - new instance -  default values 1`] = `
<div>
  <div
    data-ouia-component-type="workflow-form"
    data-ouia-safe="true"
  >
    <form
      class="pf-c-form pf-m-horizontal"
      novalidate=""
    >
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="endpoint"
          >
            <span
              class="pf-c-form__label-text"
            >
              Event Endpoint
            </span>
            <span
              aria-hidden="true"
              class="pf-c-form__label-required"
            >
               
              *
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <div
            class="pf-c-input-group"
          />
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="eventType"
          >
            <span
              class="pf-c-form__label-text"
            >
              Event Type
            </span>
            <span
              aria-hidden="true"
              class="pf-c-form__label-required"
            >
               
              *
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="eventSource"
          >
            <span
              class="pf-c-form__label-text"
            >
              Event Source
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="businessKey"
          >
            <span
              class="pf-c-form__label-text"
            >
              Business Key
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="customHeaders"
          >
            <span
              class="pf-c-form__label-text"
            >
              Event Custom Headers
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <div
            data-ouia-component-type="custom-headers-editor"
            data-ouia-safe="true"
          >
            <div
              class="pf-l-stack pf-m-gutter"
            >
              <div
                class="pf-l-stack__item"
              >
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-link pf-m-inline"
                  data-ouia-component-id="OUIA-Generated-Button-link-2"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <span
                    class="pf-c-button__icon pf-m-start"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
                      />
                    </svg>
                  </span>
                  Add Header
                </button>
              </div>
            </div>
          </div>
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="eventData"
          >
            <span
              class="pf-c-form__label-text"
            >
              Event Data
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          
        </div>
      </div>
      <div
        class="pf-c-action-list__group"
      >
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-primary"
          data-ouia-component-id="OUIA-Generated-Button-primary-2"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          Trigger
        </button>
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-secondary"
          data-ouia-component-id="OUIA-Generated-Button-secondary-2"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          Reset
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CloudEventForm tests Snapshot - new instance 1`] = `
<div>
  <div
    data-ouia-component-type="workflow-form"
    data-ouia-safe="true"
  >
    <form
      class="pf-c-form pf-m-horizontal"
      novalidate=""
    >
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="endpoint"
          >
            <span
              class="pf-c-form__label-text"
            >
              Event Endpoint
            </span>
            <span
              aria-hidden="true"
              class="pf-c-form__label-required"
            >
               
              *
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <div
            class="pf-c-input-group"
          />
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="eventType"
          >
            <span
              class="pf-c-form__label-text"
            >
              Event Type
            </span>
            <span
              aria-hidden="true"
              class="pf-c-form__label-required"
            >
               
              *
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="eventSource"
          >
            <span
              class="pf-c-form__label-text"
            >
              Event Source
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="businessKey"
          >
            <span
              class="pf-c-form__label-text"
            >
              Business Key
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="customHeaders"
          >
            <span
              class="pf-c-form__label-text"
            >
              Event Custom Headers
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <div
            data-ouia-component-type="custom-headers-editor"
            data-ouia-safe="true"
          >
            <div
              class="pf-l-stack pf-m-gutter"
            >
              <div
                class="pf-l-stack__item"
              >
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-link pf-m-inline"
                  data-ouia-component-id="OUIA-Generated-Button-link-1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <span
                    class="pf-c-button__icon pf-m-start"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
                      />
                    </svg>
                  </span>
                  Add Header
                </button>
              </div>
            </div>
          </div>
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="eventData"
          >
            <span
              class="pf-c-form__label-text"
            >
              Event Data
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          
        </div>
      </div>
      <div
        class="pf-c-action-list__group"
      >
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-primary"
          data-ouia-component-id="OUIA-Generated-Button-primary-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          Trigger
        </button>
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-secondary"
          data-ouia-component-id="OUIA-Generated-Button-secondary-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          Reset
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CloudEventForm tests Snapshot - send cloud event -  default values 1`] = `
<div>
  <div
    data-ouia-component-type="workflow-form"
    data-ouia-safe="true"
  >
    <form
      class="pf-c-form pf-m-horizontal"
      novalidate=""
    >
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="endpoint"
          >
            <span
              class="pf-c-form__label-text"
            >
              Event Endpoint
            </span>
            <span
              aria-hidden="true"
              class="pf-c-form__label-required"
            >
               
              *
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <div
            class="pf-c-input-group"
          />
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="eventType"
          >
            <span
              class="pf-c-form__label-text"
            >
              Event Type
            </span>
            <span
              aria-hidden="true"
              class="pf-c-form__label-required"
            >
               
              *
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="eventSource"
          >
            <span
              class="pf-c-form__label-text"
            >
              Event Source
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="instanceId"
          >
            <span
              class="pf-c-form__label-text"
            >
              Instance Id
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="customHeaders"
          >
            <span
              class="pf-c-form__label-text"
            >
              Event Custom Headers
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <div
            data-ouia-component-type="custom-headers-editor"
            data-ouia-safe="true"
          >
            <div
              class="pf-l-stack pf-m-gutter"
            >
              <div
                class="pf-l-stack__item"
              >
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-link pf-m-inline"
                  data-ouia-component-id="OUIA-Generated-Button-link-4"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <span
                    class="pf-c-button__icon pf-m-start"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
                      />
                    </svg>
                  </span>
                  Add Header
                </button>
              </div>
            </div>
          </div>
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="eventData"
          >
            <span
              class="pf-c-form__label-text"
            >
              Event Data
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          
        </div>
      </div>
      <div
        class="pf-c-action-list__group"
      >
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-primary"
          data-ouia-component-id="OUIA-Generated-Button-primary-4"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          Trigger
        </button>
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-secondary"
          data-ouia-component-id="OUIA-Generated-Button-secondary-4"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          Reset
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CloudEventForm tests Snapshot - send cloud event 1`] = `
<div>
  <div
    data-ouia-component-type="workflow-form"
    data-ouia-safe="true"
  >
    <form
      class="pf-c-form pf-m-horizontal"
      novalidate=""
    >
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="endpoint"
          >
            <span
              class="pf-c-form__label-text"
            >
              Event Endpoint
            </span>
            <span
              aria-hidden="true"
              class="pf-c-form__label-required"
            >
               
              *
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <div
            class="pf-c-input-group"
          />
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="eventType"
          >
            <span
              class="pf-c-form__label-text"
            >
              Event Type
            </span>
            <span
              aria-hidden="true"
              class="pf-c-form__label-required"
            >
               
              *
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="eventSource"
          >
            <span
              class="pf-c-form__label-text"
            >
              Event Source
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="instanceId"
          >
            <span
              class="pf-c-form__label-text"
            >
              Instance Id
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="customHeaders"
          >
            <span
              class="pf-c-form__label-text"
            >
              Event Custom Headers
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <div
            data-ouia-component-type="custom-headers-editor"
            data-ouia-safe="true"
          >
            <div
              class="pf-l-stack pf-m-gutter"
            >
              <div
                class="pf-l-stack__item"
              >
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-link pf-m-inline"
                  data-ouia-component-id="OUIA-Generated-Button-link-3"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <span
                    class="pf-c-button__icon pf-m-start"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
                      />
                    </svg>
                  </span>
                  Add Header
                </button>
              </div>
            </div>
          </div>
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="eventData"
          >
            <span
              class="pf-c-form__label-text"
            >
              Event Data
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          
        </div>
      </div>
      <div
        class="pf-c-action-list__group"
      >
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-primary"
          data-ouia-component-id="OUIA-Generated-Button-primary-3"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          Trigger
        </button>
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-secondary"
          data-ouia-component-id="OUIA-Generated-Button-secondary-3"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          Reset
        </button>
      </div>
    </form>
  </div>
</div>
`;
